# munin-os

./: Makefile  PROJECT_PLAN.md  README.md
distro/iso/grub/: grub.cfg
distro/kernel/configs/: blueprint_defconfig
distro/rootfs/overlay/etc/: blueprintos-release  muninos-release
distro/rootfs/overlay/etc/default/: munin-sts
distro/rootfs/overlay/etc/systemd/system/: munin-audio.service  munin-brain.service  munin-core.service  munin-firstboot.service  munin-sts.service  munin-ui.service
distro/scripts/: build-iso.sh  build-kernel.sh  build-munin-binaries.sh  build-rootfs.sh  install-selected-model.sh  model-manager.sh  run-qemu.sh  validate-image.sh
docs/: AGENTIC_ARCHITECTURE.md  BUILD.md  OS_BASICS.md
models/: manifest.json
munin-audio/: Cargo.toml
munin-audio/src/: main.rs
munin-brain/: Cargo.toml
munin-brain/src/: main.rs
munin-core/: Cargo.toml
munin-core/src/: agent.rs  main.rs  policy.rs  protocol.rs  tools.rs
munin-sts/src/: main.rs
