[package]
name = "munin-audio"
version = "0.1.0"
edition = "2021"
description = "MuninOS low-latency audio runtime"

[[bin]]
name = "munin-audio"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
cpal = "0.15"
ringbuf = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
