[package]
name = "munin-brain"
version = "0.1.0"
edition = "2021"
description = "MuninOS adaptive on-device decision engine"

[[bin]]
name = "munin-brain"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
num_cpus = "1.16"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tiny_http = "0.12"
