[package]
name = "munin-core"
version = "0.1.0"
edition = "2021"
description = "MuninOS Core — Agent orchestration and message bus"

[[bin]]
name = "munin-core"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
